@@ -973,6 +973,7 @@
         <configuration>
           <compilerArgs>
             <arg>-Xpkginfo:always</arg>
+            <arg>--enable-preview</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -990,12 +991,15 @@
           <execution>
             <phase>process-classes</phase>
             <goals>
-              <goal>java</goal>
+              <goal>exec</goal>
             </goals>
             <configuration>
-              <classpathScope>compile</classpathScope>
-              <mainClass>com.puppycrawl.tools.checkstyle.JavadocPropertiesGenerator</mainClass>
+              <executable>java</executable>
               <arguments>
+                <argument>--enable-preview</argument>
+                <argument>-classpath</argument>
+                <classpath/>
+                <argument>com.puppycrawl.tools.checkstyle.JavadocPropertiesGenerator</argument>
                 <argument>
                   ${project.build.sourceDirectory}/com/puppycrawl/tools/checkstyle/api/TokenTypes.java
                 </argument>
@@ -1770,6 +1774,7 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.5.4</version>
         <configuration>
+          <argLine>--enable-preview</argLine>
           <includes>
             <include>com/google/**/*.java</include>
             <include>org/checkstyle/**/*.java</include>
@@ -1808,6 +1813,7 @@
             </java.awt.graphicsenv>
           </systemPropertyVariables>
           <argLine>
+            --enable-preview
             --add-exports=java.desktop/java.awt=ALL-UNNAMED
             --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
             --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED
